# fastapi-blog

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  horusec-config.json  pyproject.toml  setup.cfg
.github/workflow/: lint.yml
.github/workflows/: codeql-analysis.yml  lint.yml  sast.yml  tests.yml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/db/: __init__.py  base.py  session.py
app/models/: post.py  user.py
app/routers/: posts.py  users.py
app/schemas/: __init__.py  post.py  token.py  user.py
app/services/: __init__.py  deps.py  posts.py  security.py  users.py
backend/: .flake8  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/models/: __init__.py  post.py
backend/app/routers/: posts.py  users.py
backend/app/schemas/: commons.py  post.py  user.py
backend/app/services/: __init__.py  deps.py  posts.py  security.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 157596be3a53_.py  25ffc69dec50_.py  cece9931e52a_.py  f14f46e341fc_.py
backend/tests/: conftest.py  populate_posts.py  test_posts.py  test_users.py
deployments/: Dockerfile_backend  Dockerfile_backend_dev  Dockerfile_frontend_dev  docker-compose-dev.yaml  docker-compose-test.yaml  docker-compose.yaml  otel-collector-config.yaml
deployments/entrypoints/: fapi-init.sh
deployments/fastapi/: fapi-init.sh
deployments/scripts/: fapi-init.sh
frontend/: .babelrc  .eslintrc.json  .prettierrc  next.config.js  package.json  tailwind.config.js
frontend/components/: BlogPost.js  Container.js  DarkModeSwitch.js  Github.js  HeadDefault.js  MDXComponents.js  NavBar.js  Posts.js
frontend/lib/: formatDate.js  getPosts.js
frontend/pages/: [slug].js  _app.js  _document.js  index.js  posts.js
frontend/styles/: main.css  prism.js  tailwind.css  theme.js
migrations/: env.py
migrations/versions/: 66f31b29b0c4_.py  832eecb5dfb8_.py  cece9931e52a_.py  f14f46e341fc_.py
tests/: conftest.py  populate_posts.py  test_main.py  test_posts.py  test_security.py  test_users.py
